jobs/SimPlots.err
Traceback (most recent call last):
  File "/home/zimmer/neutrino_clustering_V2/analysis.py", line 2, in <module>
    from analysis_class import analyze_simulation_outputs
  File "/gpfs/home4/zimmer/neutrino_clustering_V2/analysis_class.py", line 982
    ax1.
        ^
SyntaxError: invalid syntax
